--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "dist/index.js",
   "scripts": {
-    "test": "cross-env NODE_ENV=test jest --testTimeout=5000",
+    "test": "jest --runInBand --detectOpenHandles",
     "build": "npx tsc",
     "start": "node dist/index.js",
     "dev": "nodemon src/server.ts"
@@ -14,6 +14,7 @@
   "license": "ISC",
   "dependencies": {
     "@types/jest": "^29.5.11",
+    "@types/mongodb-memory-server": "^2.3.0",
     "@types/supertest": "^6.0.1",
     "bcrypt": "^5.1.1",
     "cookie-parser": "^1.4.6",
@@ -23,6 +24,7 @@
     "express": "^4.18.2",
     "jest": "^29.7.0",
     "jsonwebtoken": "^9.0.2",
+    "mongodb-memory-server": "^9.1.3",
     "mongoose": "^8.0.3",
     "supertest": "^6.3.3"
   },
