--- a/package.json
+++ b/package.json
@@ -16,17 +16,20 @@
     "@types/jest": "^29.5.11",
     "@types/mongodb-memory-server": "^2.3.0",
     "@types/supertest": "^6.0.1",
+    "apicache": "^1.6.3",
     "bcrypt": "^5.1.1",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "cross-env": "^7.0.3",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-validator": "^7.0.1",
     "jest": "^29.7.0",
     "jsonwebtoken": "^9.0.2",
     "mongodb-memory-server": "^9.1.3",
     "mongoose": "^8.0.3",
-    "supertest": "^6.3.3"
+    "supertest": "^6.3.3",
+    "ts-jest": "^29.1.1"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
