--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@types/supertest": "^6.0.1",
     "apicache": "^1.6.3",
     "bcrypt": "^5.1.1",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "cross-env": "^7.0.3",
